Fix expanded thumbnail display bug on small screen sizes

--- a/portfolio-site/src/Components/Thumbnail/Thumbnail.module.scss
+++ b/portfolio-site/src/Components/Thumbnail/Thumbnail.module.scss
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-width: fit-content;
 
     img {
         border: 2px solid black;
